package pb;

option java_package = "com.google.protobuf.implementation";
option java_outer_classname = "CameraServerItemProtos";

message CameraServerItem {
    required string  physicalId  = 1;
    required string  serverGuid  = 2;
    required int64   timestamp   = 3;
}

message CameraServerItems {
    repeated CameraServerItem cameraServerItem = 1;
}
